New and Create working

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,3 +4,5 @@
     <h2><input type="checkbox"> <%= link_to t.title, task_path(t)%></h2>
 
 <% end %>
+
+<%= link_to "+Create new task", new_task_path %>
